fix: select 수정, popper z-index 추가

--- a/src/styles/select.css
+++ b/src/styles/select.css
@@ -1,39 +1,36 @@
 $ns: .bc;
 $(ns) {
   &-select {
-    @apply inline-flex h-[30px] cursor-pointer;
+    @apply inline-block cursor-pointer;
 
     &-placeholder {
-      @apply font-[var(--bc-placeholder-font-weight)] text-[var(--bc-placeholder-text-color)];
-    }
-    &-focus {
-      @apply border-[var(--bc-focus-outline-color)] outline-offset-[var(--bc-focus-outline-offset)] outline-[var(--bc-focus-outline-color)];
+      @apply text-[#b3b1b1];
     }
     &-focus-none {
-      @apply border-[var(--bc-focus-outline-color/0)];
+      @apply ring-2 ring-blue-500/0;
     }
     &-status {
       &-error {
-        @apply border-[var(--bc-error-color-main)];
+        @apply ring-2 ring-error-main;
       }
       &-warning {
-        @apply border-[var(--bc-warning-color-main)];
+        @apply ring-2 ring-yellow-500 ring-opacity-90;
       }
     }
     &-bordered {
-      @apply border-[length:var(--bc-border-width)] border-solid;
+      @apply border-[1px] border-solid;
     }
     &-bordered-none {
       @apply border-none;
     }
     &-referenceElement {
-      @apply flex h-full items-center justify-between rounded-[var(--bc-rounded)] bg-white;
-      input {
-        @apply inline-block h-full w-full rounded-[var(--bc-rounded)] border-0 px-[8px] py-0 outline-none ring-opacity-0;
-      }
+      @apply border-0 bg-white;
+      /* input {
+        @apply inline-block h-full w-full rounded-6 border-0 px-[8px] py-0 outline-none ring-opacity-0;
+      } */
 
       $(ns)-select-icon {
-        @apply mx-[5px] flex h-full w-[16px] cursor-pointer items-center;
+        @apply flex h-full w-[16px] cursor-pointer items-center;
       }
       $(ns)-select-icon-disabled {
         @apply mr-[4px] cursor-not-allowed;
@@ -41,7 +38,7 @@ $(ns) {
     }
 
     &-list {
-      @apply my-[8px]	rounded-[var(--bc-rounded)] border-solid border-gray-200 bg-white p-[5px] shadow-[0_0_20px_0_rgba(0,0,0,0.15)];
+      @apply z-100 my-[8px]	rounded-6 border-solid border-gray-200 bg-white p-[5px] shadow-[0_0_20px_0_rgba(0,0,0,0.15)];
 
       li:not(.bc-select-list-disabled) {
         @apply cursor-pointer;
@@ -50,17 +47,17 @@ $(ns) {
         @apply overflow-hidden text-ellipsis whitespace-nowrap px-[8px] py-[5px];
       }
       &-hover {
-        @apply rounded-[var(--bc-rounded)] bg-neutral-100;
+        @apply rounded-6 bg-neutral-100;
       }
       &-item {
-        @apply rounded-[var(--bc-rounded)] bg-blue-100 font-bold;
+        @apply rounded-6 bg-blue-100 font-bold;
       }
       &-disabled {
-        @apply bg-[var(--bc-disable-background)];
+        @apply bg-[#fff];
       }
     }
     &-disabled {
-      @apply cursor-[var(--bc-disable-cursor)] rounded-[var(--bc-rounded)] border-[length:var(--bc-border-width)] border-[var(--bc-disable-border-color)] bg-[var(--bc-disable-background)] text-[var(--bc-disable-text-color)];
+      @apply cursor-not-allowed rounded-6 bg-[#dbdbdb] text-[#b3b1b1];
     }
 
     &-multiSelect {
@@ -73,12 +70,12 @@ $(ns) {
           @apply ms-[4px] cursor-pointer text-xs text-gray-300;
         }
       }
-      &-inputArea {
+      /* &-inputArea {
         @apply ml-[2px] flex;
-        input {
+        /* input {
           @apply inline-block w-[1px] p-0;
-        }
-      }
+        } 
+      } */
     }
   }
 }
